--- a/.screenrc
+++ b/.screenrc
@@ -1,1 +1,47 @@
-# Ryan Kanno <ryankanno@localkinegrinds.com># Follow me on twitter @ryankanno # http://bit.ly/jLtj# UTF-8 everywheredefutf8 on# skip introstartup_message off# default lines is 100, let's do something huge.comdefscrollback 10000# detach on disconnectautodetach on# use normal audible bellvbell off# restore window contents after using vi, etc.altscreen on# use backtick for prefix key instead of Ctrl-Aescape ``# make the shell in every window a login shellshell -$SHELL# hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= %1` %m/%d/%y %C:%s%a"hardstatus alwayslastline "%{= kw}[ %{= kb}%H%{= kw} ][%= %{= kw}%?%-Lw%?%{= kW}%n*%f %t%?%?%{= kw}%?%+Lw%?%?%= ][ %{r}%l%{w} ]%{w}[%{r} %d/%m/%y %C %A %{w}]%{w}"
+# UTF-8 everywhere
+defutf8 on
+
+# skip intro
+startup_message off
+
+# disable Ctrl-S/Ctrl-Q "flow control"
+defflow off
+
+# default lines is 100, let's do something huge.com
+defscrollback 10000
+
+# detach on disconnect
+autodetach on
+
+# use regular audible bell
+vbell off
+
+# use backtick for prefix key instead of Ctrl-A
+escape ``
+
+# make the shell in every window a login shell
+shell -$SHELL
+
+# connect windows to the display so programs like mplayer can find it when
+# we're inside a screen in a terminal application in a graphical environment
+setenv DISPLAY ':0'
+
+# print wackier status messages
+nethack on
+
+# restore window contents after using (e.g.) vi
+altscreen on
+
+# show MPD info in status bar
+backtick 1 5 5 $HOME/.screen_files/get_load
+
+# Set the caption on the bottom line:
+# window-list <nowplaying> <mm/dd/yy> <HH:MM>am/pm
+hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= hehe %1` %m/%d/%y %C:%s%a"
+#hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %d/%m %{W}%c %{g}]'
+
+#Working on this one
+#hardstatus alwayslastline
+#hardstatus string '%{= kY}[%{G}%H%{y}][%1`][%{W}%m-%d-%Y%{W}%C %A%{y}]'
+
+screen -t 
