--- a/.screenrc
+++ b/.screenrc
@@ -34,10 +34,11 @@ altscreen on
 
 # show MPD info in status bar
 backtick 1 5 5 $HOME/.screen_files/get_load
+backtick 2 60 60 $HOME/.screen_files/get_gmail
 
 # Set the caption on the bottom line:
 # window-list <nowplaying> <mm/dd/yy> <HH:MM>am/pm
-hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= hehe %1` %m/%d/%y %C:%s%a"
+hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= %1 %2` %m/%d/%y %C:%s%a"
 #hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %d/%m %{W}%c %{g}]'
 
 #Working on this one
