--- a/.screenrc
+++ b/.screenrc
@@ -38,7 +38,7 @@ backtick 2 60 60 $HOME/.screen_files/get_gmail
 
 # Set the caption on the bottom line:
 # window-list <nowplaying> <mm/dd/yy> <HH:MM>am/pm
-hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= %1 %2` %m/%d/%y %C:%s%a"
+hardstatus alwayslastline "%{= kw}%-w%{= BW}%n %t%{-}%+w %-= %1` %2` %m/%d/%y %C:%s%a"
 #hardstatus string '%{= kG}[ %{G}%H %{g}][%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{B} %d/%m %{W}%c %{g}]'
 
 #Working on this one
