--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,10 @@
     ci = commit
     st = status
     w  = whatchanged --reverse
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+
+    # http://www.jukie.net/bart/blog/pimping-out-git-log
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+
     pu = pull
 
 [apply]
