Removed left status

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,7 @@ set-option -g status-utf8 on
 set-option -g status-justify left
 set-option -g status-bg default
 set-option -g status-fg white
+set-option -g status-left-length 0
 
 setw -g window-status-bg black
 setw -g window-status-current-bg green
