--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ set -g prefix `
 
 bind C-a send-prefix
 
-# reload 
+# reload
 unbind r
 bind r source-file ~/.tmux.conf \; run-shell "echo 'Configuration Reloaded'"
 
@@ -13,7 +13,7 @@ unbind l
 bind l list-sessions
 
 # fixes mac os-x clipboad -> https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
 
 # colors
 set -g default-terminal "screen-256color"
@@ -46,7 +46,7 @@ bind q confirm-before kill-pane
 # quick view of processes
 bind '~' split-window "exec bash -c 'htop -u fifr'"
 
-# windows start at 1 
+# windows start at 1
 set -g base-index 1
 
 # window title
@@ -55,7 +55,7 @@ set-window-option -g automatic-rename on
 # enable utf-8
 setw -g utf8 on
 
-# refresh statusbar 
+# refresh statusbar
 set -g status-interval 5
 
 # my pretty
@@ -67,9 +67,7 @@ set-option -g status-left-length 0
 
 setw -g window-status-bg black
 setw -g window-status-current-bg green
-setw -g window-status-current-fg black 
-setw -g window-status-alert-attr default
-setw -g window-status-alert-fg yellow
+setw -g window-status-current-fg black
 
 # inactive window
 setw -g window-status-format '#[fg=default]#I #[default]#W'
