Added osx specific items to its own .conf file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,3 +74,6 @@ setw -g window-status-format '#[fg=default]#I #[default]#W'
 setw -g window-status-current-format '#I #W'
 
 set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %m/%d/%y ]'
+
+# osx specific
+if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
