Added tmux config Added tm bash function

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,5 +75,8 @@ setw -g window-status-current-format '#I #W'
 
 set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %m/%d/%y ]'
 
+# create new sessions
+new-session -n $HOST
+
 # osx specific
 if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
