--- a/.tmux-osx.conf
+++ b/.tmux-osx.conf
@@ -1,2 +1,2 @@
 # http://www.economyofeffort.com/2013/07/29/reattach-to-user-namespace-the-fix-for-your-tmux-in-os-x-woes/
-set-option -g default-command "/opt/local/bin/reattach-to-user-namespace bash"
+set-option -g default-command "/opt/local/bin/reattach-to-user-namespace -l bash"
