Fixing reattach-to-user-namespace

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,5 +72,5 @@ setw -g window-status-current-format '#I #W'
 
 set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %m/%d/%y ]'
 
-# osx specific
-if-shell 'test "$(uname)" = "Darwin"' 'source ~/.tmux-osx.conf'
+# osx fix
+set-option -g default-command "$HOME/reattach-to-user-namespace-wrapper -l $SHELL"
