--- a/tmux.conf
+++ b/tmux.conf
@@ -72,5 +72,5 @@ setw -g window-status-current-format '#I #W'
 
 set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %m/%d/%y ]'
 
-# osx fix
-set-option -g default-command "$HOME/reattach-to-user-namespace-wrapper -l $SHELL"
+# tmux-pasteboard
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
