Unset RBENV_VERSION for accidents

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,3 +74,6 @@ set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %
 
 # tmux-pasteboard
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# unset RBENV_VERSION in case it's (accidentally) set
+set-environment -u RBENV_VERSION
