Added -gu flag to set-environment call

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,4 +76,4 @@ set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # unset RBENV_VERSION in case it's (accidentally) set
-set-environment -u RBENV_VERSION
+set-environment -gu RBENV_VERSION
