Added new window split bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,9 +27,10 @@ setw -g mode-keys vi
 # backtick goes to last window
 bind ` last-window
 
-# split windows
-bind s split-window -v
-bind v split-window -h
+# current path in new windows
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # vi bindings to move panes
 bind h select-pane -L
