Modified copy/paste keys in copy-mode-vi in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,3 +74,7 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 # unset RBENV_VERSION in case it's (accidentally) set
 set-environment -gu RBENV_VERSION
+
+# copy / paste in tmux
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
