Cleaned up and updated tmux.conf (had it locally for years. lol.)

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,11 @@
 # use backtick instead of ctrl-b
 unbind C-b
-set -g prefix `
+set-option -g prefix `
+bind ` send-prefix
 
-bind C-a send-prefix
-
-# reload
+# reload configuration
 unbind r
-bind r source-file ~/.tmux.conf \; run-shell "echo 'Configuration Reloaded'"
-
-# sessions
-unbind l
-bind l list-sessions
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf reloaded'
 
 # colors
 set -g default-terminal "screen-256color"
@@ -21,22 +16,29 @@ set-option -g default-shell /bin/bash
 # i like to read a lot
 set-option -g history-limit 10000
 
+# faster command sequences re: https://superuser.com/questions/942677/consequences-of-escape-time-0-tmux-setting
+set -s escape-time 20
+
 # vi mode
 setw -g mode-keys vi
-
-# backtick goes to last window
-bind ` last-window
 
 # current path in new windows
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind Tab last-window
 
-# vi bindings to move panes
+# vi bindings to navigate panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# pane resizing
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
 
 # kill panes
 bind q confirm-before kill-pane
@@ -44,11 +46,18 @@ bind q confirm-before kill-pane
 # quick view of processes
 bind '~' split-window "exec bash -c 'htop -u fifr'"
 
-# windows start at 1
+# windows / panes start at 1
 set -g base-index 1
+setw -g pane-base-index 1
 
 # window title
 set-window-option -g automatic-rename on
+
+# set titles
+set -g set-titles on
+
+# renumber windows when closed
+set -g renumber-windows on
 
 # refresh statusbar
 set -g status-interval 5
@@ -75,6 +84,20 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 # unset RBENV_VERSION in case it's (accidentally) set
 set-environment -gu RBENV_VERSION
 
-# copy / paste in tmux
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel pbcopy
+# copy
+bind Enter copy-mode
+
+run -b 'tmux bind -t vi-copy v begin-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi v send -X begin-selection 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi H send -X start-of-line 2> /dev/null || true'
+run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
+
+if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
