Updated tmux.conf for latest version

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,24 +59,34 @@ set -g set-titles on
 # renumber windows when closed
 set -g renumber-windows on
 
-# refresh statusbar
-set -g status-interval 5
-
-# my pretty
-set-option -g status-justify left
+# statusbar
+set-option -g status on
+set-option -g status-justify centre
+set-option -g status-interval 5
 set-option -g status-bg default
 set-option -g status-fg white
-set-option -g status-left-length 0
 
-setw -g window-status-bg black
-setw -g window-status-current-bg green
-setw -g window-status-current-fg black
+# default window title colors
+set-window-option -g window-status-style fg=white
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-style dim
+
+# active window title colors
+set-window-option -ag window-status-current-style fg=red
+set-window-option -ag window-status-current-style bg=colour236
+set-window-option -ag window-status-current-style bright
 
 # inactive window
 setw -g window-status-format '#[fg=default]#I #[default]#W'
 setw -g window-status-current-format '#I #W'
 
-set -g status-right '#[fg=white][#[fg=red, bright] #(hostname -s)#[fg=white] | %m/%d/%y ]'
+# status bars
+
+set -g status-left-length 85
+set -g status-left "#[fg=green]#(hostname -s)#[fg=white] | #[fg=white]#(uptime | rev | cut -d ' ' -f 1-3 | rev)"
+
+set -g status-right-length 80
+set -g status-right "#[fg=white]%m/%d/%y #(date -u | awk '{print $4}')"
 
 # tmux-pasteboard
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
@@ -101,3 +111,4 @@ run -b 'tmux bind -t vi-copy L end-of-line 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi L send -X end-of-line 2> /dev/null || true'
 
 if -b 'command -v reattach-to-user-namespace > /dev/null 2>&1' 'bind y run -b "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+
