--- a/tmux.conf
+++ b/tmux.conf
@@ -89,7 +89,7 @@ set -g status-right-length 80
 set -g status-right "#[fg=white]%m/%d/%y #(date -u | awk '{print $4}')"
 
 # tmux-pasteboard
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+set-option -g default-command "reattach-to-user-namespace ${SHELL}"
 
 # unset RBENV_VERSION in case it's (accidentally) set
 set-environment -gu RBENV_VERSION
