--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,25 +63,19 @@ set -g renumber-windows on
 set-option -g status on
 set-option -g status-justify centre
 set-option -g status-interval 5
-set-option -g status-bg default
-set-option -g status-fg white
+set-option -g status-style "fg=white,bg=default"
 
 # default window title colors
-set-window-option -g window-status-style fg=white
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-style dim
+set-window-option -g window-status-style "fg=white,bg=default,dim"
 
 # active window title colors
-set-window-option -ag window-status-current-style fg=red
-set-window-option -ag window-status-current-style bg=colour236
-set-window-option -ag window-status-current-style bright
+set-window-option -ag window-status-current-style "fg=red,bg=colour236,bright"
 
 # inactive window
 setw -g window-status-format '#[fg=default]#I #[default]#W'
 setw -g window-status-current-format '#I #W'
 
 # status bars
-
 set -g status-left-length 85
 set -g status-left "#[fg=green]#(hostname -s)#[fg=white] | #[fg=white]#(uptime | rev | cut -d ' ' -f 1-3 | rev)"
 
