--- a/dot_alacritty.yml
+++ b/dot_alacritty.yml
@@ -14,7 +14,7 @@ window:
     y: 2
 
   dynamic_padding: false
-  decorations: buttonless
+  decorations: Full
 
 scrolling:
   history: 50000
@@ -228,3 +228,5 @@ key_bindings:
   - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                       } # Alt + ^
   - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
   - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+  - { key: N,         mods: Control|Alt, action: SpawnNewInstance           }
+  - { key: Return,    mods: Control|Alt, action: SpawnNewInstance           }
