added osx specific cut/paste

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,3 +1,6 @@
+# os detection
+IS_OSX="uname | grep -q Darwin"
+
 # use backtick instead of ctrl-b
 unbind C-b
 set-option -g prefix `
@@ -83,7 +86,7 @@ set -g status-right-length 80
 set -g status-right "#[fg=white]%m/%d/%y #(date -u | awk '{print $4}')"
 
 # tmux-pasteboard
-set-option -g default-command "reattach-to-user-namespace ${SHELL}"
+if-shell "$IS_OSX" "set -g default-command 'reattach-to-user-namespace -l ${SHELL}'"
 
 # unset RBENV_VERSION in case it's (accidentally) set
 set-environment -gu RBENV_VERSION
