chore: update .chezmoiignore for macOS
- Ignore `.finicky.js` file on Linux systems
- https://discourse.gnome.org/t/nautilus-seg-fault-in-folder-with-javascript-file/19653

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,5 +2,6 @@ LICENSE
 README.md
 HISTORY.md
 {{- if eq .chezmoi.os "linux" }}
-.hammerspoon  # ignore macos
+.hammerspoon
+.finicky.js
 {{- end }}
