chore: switched tmux to not run login

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -16,6 +16,9 @@ set -g default-terminal "screen-256color"
 # default shell (bash... sue me)
 set-option -g default-shell /bin/bash
 
+# default to not use a login shell
+set -g default-command "${SHELL}"
+
 # i like to read a lot
 set-option -g history-limit 10000
 
