--- a/dot_alacritty.toml
+++ b/dot_alacritty.toml
@@ -41,10 +41,10 @@ TERM = "xterm-256color"
 WINIT_X11_SCALE_FACTOR = "1.0"
 
 [font]
-size = 18.0
+size = 20.0
 
 [font.bold]
-family = "SauceCodePro Nerd Font"
+family = "RobotoMono Nerd Font"
 style = "Bold"
 
 [font.glyph_offset]
@@ -52,7 +52,7 @@ x = 0
 y = 0
 
 [font.italic]
-family = "SauceCodePro Nerd Font"
+family = "RobotoMono Nerd Font"
 style = "Italic"
 
 [font.normal]
